[package]
name = "hessra-client"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Hessra Team"]
description = "HTTP client for Hessra authorization services"
repository = "https://github.com/Hessra-Labs/hessra-client"
documentation = "https://docs.rs/hessra-client"
keywords = ["hessra", "authorization", "client", "mtls", "security"]
categories = ["authentication", "api-bindings"]

[dependencies]
hessra-token-core = { path = "../hessra-tokens/hessra-token-core", version = "1.0.0" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
